Implement projects module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,8 @@
       "@core": ["./src/core"],
       "@tournament/*": ["./src/tournament/*"],
       "@tournament": ["./src/tournament"],
-      "@card/*": ["./src/card/*"],
-      "@card": ["./src/card"],
+      "@projects/*": ["./src/projects/*"],
+      "@projects": ["./src/projects"],
       "@events/*": ["./src/events/*"],
       "@events": ["./src/events"],
       "@quests/*": ["./src/quests/*"],
