--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "sqs-consumer": "^11.0.2"
+    "sqs-consumer": "^11.0.2",
+    "tonweb": "^0.0.66",
+    "tonweb-mnemonic": "^1.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
